welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: illegal start of simple expression
	if (weekday == false); (vacation == false) {
                             ^sleepIn:5: error: illegal start of simple expression
	if (weekday == true); (vacation == false) {
                            ^